--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="https://github.com/praveena230/Portfolio-/raw/refs/heads/main/Resume.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="T. Thimila Resume.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
