--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="https://githup.com/praveena230/protfolio-/raw/refs/heads/main/Resume.Pdf"T.Thimila Resume.pdf.pdf.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="T.Thimila Resume.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
