--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="gallery pages.pdf.jpg"alt="Your Profile Picture" class="profile-picture">
+            <img src="gallery pages.pdf"alt="Your Profile Picture" class="profile-picture">
             <h1>T. Thimilarupathy </h1>
             <p>Am Computer science</p>
         </div>
