--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="gallery pages.pdf"alt="Your Profile Picture" class="profile-picture"/>
-            <h1>T.Thimilarupathy </h1>
+            <img src="gallery pages.pdf"alt="Your Profile Picture" class="profile-picture">
+            <h1>Thimilarupathy T</h1>
             <p>Am Computer science</p>
         </div>
     </header>
